--- a/Question.html
+++ b/Question.html
@@ -24,7 +24,13 @@
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body"></div>
+                    <div class="accordion-body">
+                        sessionStorage is similar to localStorage ; the difference is that while data in localStorage
+                        doesn't expire, data in sessionStorage is cleared when the page session ends. Whenever a
+                        document is loaded in a particular tab in the browser, a unique page session gets created and
+                        assigned to that particular tab.
+
+                    </div>
                 </div>
             </div>
             <div class="accordion-item">
