Gloval and Block scope

--- a/Question.html
+++ b/Question.html
@@ -42,7 +42,13 @@
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body"></div>
+                    <div class="accordion-body">
+                        The main difference between the local scope and block scope is that the block statements (e.g.
+                        if conditions or for loops), don't create a new scope. So the var keyword will not have an
+                        effect, because the variables are still in the same scope. ES6 introduced block scope by using
+                        the let and const keywords.
+
+                    </div>
                 </div>
             </div>
             <div class="accordion-item">
