--- a/Question.html
+++ b/Question.html
@@ -60,7 +60,11 @@
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body"></div>
+                    <div class="accordion-body">
+                        The event loop works by making a request to some internal or external "event provider" (that
+                        generally blocks the request until an event has arrived), then calls the relevant event handler
+                        ("dispatches the event").
+                    </div>
                 </div>
             </div>
             <div class="accordion-item">
