--- a/Question.html
+++ b/Question.html
@@ -76,7 +76,10 @@
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body"></div>
+                    <div class="accordion-body">To find the points where the numerical expression is undefined, we set
+                        the denominator equal to zero and solve. Once we find the points where the denominator equals
+                        zero, we can say that our numerical expression is valid for all numbers except the numbers where
+                        it is undefined.</div>
                 </div>
             </div>
         </div>
