--- a/Question.html
+++ b/Question.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1 class="text-center">Assaiment Question</h1>
+        <h1 class="text-center">Assaigment Question</h1>
     </header>
     <main class="mt-5">
         <div class="accordion accordion-flush" id="accordionFlushExample">
